fix: specify overflow-x property for no-overflow class

--- a/src/app/window/window.component.css
+++ b/src/app/window/window.component.css
@@ -47,5 +47,5 @@ i {
   transition: none !important;
 }
 .no-overflow {
-  overflow: hidden !important;
+  overflow-x: hidden !important;
 }
